fix(RequestPage): double scrollbar and remove snapping

--- a/src/features/student/RequestPage/RequestPage.module.css
+++ b/src/features/student/RequestPage/RequestPage.module.css
@@ -2,23 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  overflow-y: auto;
   height: 100vh;
-  scroll-snap-type: y mandatory;
-}
-
-@media (min-width: 768px) {
-  .header {
-    scroll-snap-align: start;
-  }
-
-  .footer {
-    scroll-snap-align: start;
-  }
-
-  .searchAndFilter {
-    scroll-snap-align: start;
-  }
 }
 
 .main {
@@ -32,10 +16,9 @@
 
 @media (min-width: 768px) {
   .main {
-    height: 90vh;
     padding: var(--space-xl) var(--space-7xl) var(--space-5xl) var(--space-7xl);
     gap: var(--space-xl);
-    min-height: 120vh;
+    height: 90vh;
   }
 }
 
